--- a/B/build.gradle
+++ b/B/build.gradle
@@ -12,7 +12,5 @@ repositories {
 }
 
 dependencies {
-    compile project(':A-api')
-
-    testCompile group: 'junit', name: 'junit', version: '4.12'
+    implementation project(':A')
 }
