--- a/build.gradle
+++ b/build.gradle
@@ -18,8 +18,14 @@ allprojects {
 
 subprojects {
     dependencies {
-        testCompile group: 'junit', name: 'junit', version: '4.12'
+        testImplementation 'org.junit.jupiter:junit-jupiter-api:5.10.3'
+        testImplementation 'org.junit.jupiter:junit-jupiter-engine:5.10.3'
     }
+
+    tasks.named('test') {
+        useJUnitPlatform()
+    }
+
 }
 
 jar {
